Combined with bill_section
Co-Authored-By: zormpalas <118913235+zormpalas@users.noreply.github.com>

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="scan_a_code">Scan a QR Code</string>
     <string name="result_not_found">Result Not Found</string>
     <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>
+
+    <string name="total_amount">Total Amount: €%.2f</string>
 </resources>
